--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" /> 
   <!-- <link rel="stylesheet" href="./assets/CSS/reset.css" /> -->
   <link rel="stylesheet" href="./assets/CSS/style.css" />
-  <title>Weather Dashboard</title>
+  <title>SkyWatch - Weather Dashboard</title>
 </head>
 
 <body>
