added default city buttons below search bar, that update with recent searches. added js functionality for these too

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <header class="container-fluid text-center text-white bg-dark p-2 weather-header">
-    <h1>Weather Dashboard</h1>
+    <h1>Skywatch - Weather Dashboard</h1>
   </header>
 
   <!-- max-width for ultra wide resolutions -->
@@ -36,6 +36,14 @@
                 <hr class="hr weather-hr" />
               </div>
             </div>
+          </div>
+          <div class="list-group" id="history">
+            <button type="button" class="list-group-item list-group-item-action city-btn" id="city1" data-city="london">London</button>
+            <button type="button" class="list-group-item list-group-item-action city-btn" id="city2" data-city="brighton">Brighton</button>
+            <button type="button" class="list-group-item list-group-item-action city-btn" id="city3" data-city="bristol">Bristol</button>
+            <button type="button" class="list-group-item list-group-item-action city-btn" id="city4" data-city="manchester">Manchester</button>
+            <button type="button" class="list-group-item list-group-item-action city-btn" id="city5" data-city="glasgow">Glasgow</button>
+            <button type="button" class="list-group-item list-group-item-action city-btn" id="city6" data-city="edinburgh">Edinburgh</button>
           </div>
         </form>
         <div class="list-group" id="history"></div>
